# rkale

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml  test.yml
rkale/: __init__.py  checked_operations.py  config.py  exceptions.py  operations.py  project_operations.py  rkale.py  utils.py
tests/: test_rkale.py
